<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
         文案类别前缀规范:
		报错类: err_
		提示类: msg_
		状态类: sta_
		控件显示:cap_
    -->

    <string name="app_name">钢舞姬图书馆</string>
    <string name="cap_database_category_equip">装备</string>
    <string name="cap_database_category_technology">科技</string>
    <string name="cap_database_category_tank">钢舞姬</string>
    <string name="cap_database_category_development">研发</string>
    <string name="cap_database_category_setting">设置</string>
    <string name="cap_database_category_skill">魔改</string>
    <string name="cap_database_category_quest">任务</string>
    <string name="cap_database_category_metaphysics">死水姬务段</string>
    <string name="cap_database_category_tips">攻略</string>
    <string name="msg_is_disabled">该功能还未开发，开发时请奔走相告</string>
    <string name="msg_is_nothing">亲爱的指挥官阁下，没有找到您所要的数据。</string>
    <string name="msg_now_loading">正在拼命加载中……</string>
    <string name="msg_net_error">网络错误，请稍后再试</string>
    <string name="msg_not_new_ver">亲爱的指挥官阁下，您的版本已经是最新的呢</string>
    <string name="msg_max_star_mode_on">恭喜指挥官开启了，所有钢舞姬授勋MAX模式！</string>
    <string name="msg_max_star_mode_off">钢舞姬授勋MAX模式关闭！</string>
    <string name="msg_max_star_mode_on_detail">【%1$s】授勋成功！</string>
    <string name="msg_input_is_nothing">亲爱的指挥官阁下，请认真填写资料哟。</string>
    <string name="msg_opeartion_is_ok">操作成功！</string>
    <string name="msg_tech_btn_share_title">指挥官【%s】的科技为：</string>
    <string name="msg_share_subject">分享</string>
    <string name="msg_share_title">分享来自《钢舞姬图书馆》</string>
    <string name="msg_share_success">分享成功！</string>
    <string name="cap_et_input_your_counts">点击这里输入数量</string>
    <string name="cap_et_input_your_lv">输入装备级别</string>
    <string name="cap_btn_close">关闭</string>
    <string name="cap_btn_ok">确定</string>
    <string name="cap_btn_search_category">相关钢舞姬</string>
    <string name="cap_btn_default">默认</string>
    <string name="cap_toggle_button_open">开启</string>
    <string name="cap_toggle_button_close">关闭</string>

    <!-- 钢舞姬查询和相关页面 -->

    <string name="cap_tank_list_title">钢舞姬查询</string>
    <string name="cap_tank_list_search_label">类别：</string>
    <string name="cap_tank_list_search_value_custom">自定义</string>
    <string name="cap_tank_detail_title">坦克属性</string>
    <string name="cap_tank_statistics_fire">火力：%1$d</string>
    <string name="cap_tank_statistics_armourpiercing">穿甲：%1$d</string>
    <string name="cap_tank_statistics_hit">命中：%1$d</string>
    <string name="cap_tank_statistics_durable">耐久：%1$d</string>
    <string name="cap_tank_statistics_armour">装甲：%1$d</string>
    <string name="cap_tank_statistics_dodge">闪避：%1$d</string>
    <string name="cap_tank_statistics_hide">隐蔽：%1$d</string>
    <string name="cap_tank_statistics_spot">侦查：%1$d</string>
    <string name="cap_tank_statistics_range">射程：%1$d</string>
    <string name="cap_tank_statistics_acqierement">才艺：%1$s</string>
    <string name="cap_tank_statistics_tankequipmentslots">装备：%1$s</string>
    <string name="cap_tank_statistics_engine">引擎：%1$s</string>
    <string name="cap_tank_statistics_bodywork">车体：%1$s</string>
    <string name="cap_dialog_choice_filter">请选择筛选条件</string>
    <string name="cap_dialog_tech_choice_filter">请选择科技</string>
    <string name="cap_btn_all">全部</string>
    <string name="cap_choice_filter_type">车型</string>
    <string name="cap_choice_filter_nationality">国籍</string>
    <string name="cap_choice_filter_star">星级</string>
    <string name="cap_choice_filter_attribute">属性</string>
    <string name="cap_tank_check_engine">查看引擎：</string>
    <string name="cap_tank_skill_engine">引擎特性：</string>
    <string name="cap_tank_check_shield">查看防护：</string>
    <string name="cap_tank_skill_shield">防护特性：</string>
    <string name="cap_tank_check_bodywork">查看车体：</string>
    <string name="cap_tank_skill_bodywork">车体特性：</string>
    <string name="cap_dialog_selected">当前</string>
    <string name="cap_tank_age">年龄：%1$s</string>
    <string name="cap_tank_drop">掉落：%1$s</string>
    
    <!-- 装备页 -->
    <string name="cap_equip_list_title">装备</string>
    <string name="cap_equip_sp_name">[%1$s]</string>
    <string name="cap_equip_lv">S%1$d</string>
    <string name="cap_equip_input_number">输入【S%1$d】装备的数量</string>
    <string name="cap_btn_equip_clear">恢复</string>
    <string name="cap_btn_equip_create">制作</string>
    <string name="cap_btn_equip_normal_mode">普通</string>
    <string name="cap_btn_equip_sp_mode">特殊</string>
    <string name="cap_equip_tool_tip">合成该装备还需要消耗以上资源</string>
    <string name="cap_equip_tools">装备升级成本计算器（新）</string>
    <string name="cap_existing_equip">现有装备数量：</string>
    <string name="cap_create_equip_lv">制作装备级别：</string>
    <string name="cap_create_equip_count">制作装备数量：</string>
    <string name="cap_dialog_create_equip_title_nor">制作%1$d个【S%2$d】普通装备</string>
    <string name="cap_dialog_create_equip_title_sp">制作%1$d个【S%2$d】特殊装备</string>

    <!-- 科技页 -->
    <string name="cap_tech_list_title">科技</string>
    <string name="cap_tech_emu_title">科技板块模拟器</string>
    <string name="cap_tech_sp_name">[%1$s]</string>
    <string name="cap_tech_btn_emu">模拟器</string>
    <string name="cap_tech_btn_setdata">记忆</string>
    <string name="cap_tech_btn_view">查看</string>
    <string name="cap_tech_btn_calculation">计算</string>
    <string name="cap_tech_btn_share">分享</string>
    
    <string name="tech_main_gun_all">主炮 ：　　</string>
    <string name="tech_shield_all">防护：　　</string>
    <string name="tech_bodywork_all">综合车体：</string>
    <string name="tech_engine_all">综合引擎：</string>
    <string name="tech_seek_all">综合索敌：</string>
    
    <!-- 攻略页 -->
    <string name="cap_official_strategy_title">官方攻略</string>
    <string name="cap_terrain_strategy">推图地形一览</string>
    <string name="cap_terrain_strategy_sp">T图地形一览</string>
    <string name="cap_terrain">地形一览</string>
    <string name="cap_terrain_effect">地形造成的影响</string>
    <string name="cap_terrain_resistance">对应抗性</string>
    <string name="cap_terrain_activity">活动地形一览</string>
    <string name="cap_terrain_raid">突袭地形一览</string>

    <!-- 玄学页 -->
    <string name="cap_metaphysics_title">玄学</string>
    <string name="cap_metaphysics_tip">《死水姬务段模拟实验室》</string>
    <string name="cap_metaphysics_info">敬爱的指挥官们：最近推出的神秘研究血统测试实验室，要不要试试？</string>
    <string name="cap_metaphysics_btn_get">GET</string>
    <string name="cap_metaphysics_btn_view_tank">查看详情</string>
    <string name="cap_metaphysics_input_your_name">点击这里输入名字</string>
    <string name="cap_metaphysics_dialog_title">尊敬的指挥官【%1$s】</string>
    <string name="cap_metaphysics_dialog_info">这是代表您今日运势的钢舞姬</string>

    <!-- live2d -->
    <string name="msg_failed_to_load">live2D加载失败！</string>

    <!-- 设置 -->
    <string name="cap_setting_medal_mode">全部授勋模式：</string>
    <string name="cap_setting_live2d_setup_tool">安装Live2D资源</string>
    <string name="cap_setting_ver_update_history">版本更新历史</string>
    <string name="cap_setting_ver_update">版本更新</string>

</resources>