<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg_dialog_and_other"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sub_titlebar_height"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/bg_tank_detai_title_info"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cap_tank_list_search_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tv_size_medium_big" />

            <com.kituri.app.widget.XTextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_select_down_arrow"
                android:drawablePadding="10dp"
                android:gravity="left|fill_vertical"
                android:paddingRight="10dp"
                android:textColor="@color/td_highlight_text"
                android:textSize="@dimen/tv_size_medium_big" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_tech_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.kituri.app.widget.XTextView
                android:id="@+id/tv_view"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="54dp"
                android:background="@drawable/btn_blue_high_light_selector"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/cap_tech_btn_view"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tv_size_medium_sml"
                android:textStyle="bold" />

            <com.kituri.app.widget.XTextView
                android:id="@+id/tv_calculation"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_blue_high_light_selector"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/cap_tech_btn_calculation"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tv_size_medium_sml"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.kituri.app.widget.XTextView
                android:id="@+id/tv_share"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="54dp"
                android:background="@drawable/btn_blue_high_light_selector"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/cap_tech_btn_share"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tv_size_medium_sml"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>